Add skeleton api methods
